--- a/final-project/package.json
+++ b/final-project/package.json
@@ -15,6 +15,7 @@
     "base64url": "^3.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "mysql": "^2.18.1"
   }
 }
